test/files/pos/t1230/S.scala
object S extends App { (new J).foo = 5 }
