test/files/neg/t11788b/Bar.scala
object Bar extends App {
  println(new Foo().test())
}
